RESOLVED FIXED181306
WKWebView loses minimum layout size overrides that happen while the process is terminated
https://bugs.webkit.org/show_bug.cgi?id=181306
Summary WKWebView loses minimum layout size overrides that happen while the process i...
Tim Horton
Reported 2018-01-04 14:21:13 PST
WKWebView loses minimum layout size overrides that happen while the process is terminated
Attachments
Patch (12.84 KB, patch)
2018-01-04 14:21 PST, Tim Horton
no flags
Tim Horton
Comment 1 2018-01-04 14:21:46 PST
Tim Horton
Comment 2 2018-01-04 14:22:30 PST
WebKit Commit Bot
Comment 3 2018-01-04 14:54:13 PST
Comment on attachment 330487 [details] Patch Clearing flags on attachment: 330487 Committed r226424: <https://trac.webkit.org/changeset/226424>
WebKit Commit Bot
Comment 4 2018-01-04 14:54:14 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.